--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Not Weather</string>
     <string name="action_settings">Settings</string>
     <string name="temp">Temp: %s</string>
-    <string name="name">Name: %s</string>
     <string name="wind">Wind: %s %sm/s</string>
+    <string name="forecast">%s: %s</string>
     <string name="location_required">Location Required</string>
     <string name="location_require_rationale">We need access to your location to show you the weather in your area</string>
 </resources>
